# task_py_2

./: .gitignore  conftest.py  docker-compose.yml  init.sql  main.py  pyproject.toml  ruff.toml
cache/: __init__.py  filtered.py
models/: __init__.py  db.py  filter.py
schema/: __init__.py  filter.py  rows.py
tests/: test_filtered.py
